--- a/FlorescentDotNet/FlorescentDotNet.csproj
+++ b/FlorescentDotNet/FlorescentDotNet.csproj
@@ -3,13 +3,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <RootNamespace>Poll_bot</RootNamespace>
+        <RootNamespace>FlorescentDotNet</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net" Version="2.4.0" />
+      <PackageReference Include="Discord.Net" Version="3.1.0" />
+      <PackageReference Include="Discord.Net.Commands" Version="3.1.0" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
     </ItemGroup>
 
